ios/text
=== BUILD TARGET AppCenterReactNative OF PROJECT AppCenterReactNative WITH CONFIGURATION Release ===

Check dependencies

Write auxiliary files
/bin/mkdir -p /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/armv7
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/armv7/AppCenterReactNative.LinkFileList
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative-generated-files.hmap
/bin/mkdir -p /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/arm64
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/arm64/AppCenterReactNative.LinkFileList
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative.hmap
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative-project-headers.hmap
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative-all-non-framework-target-headers.hmap
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative-own-target-headers.hmap
write-file /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/AppCenterReactNative-all-target-headers.hmap

SymLink /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/BuildProductsPath/Release-iphoneos/libAppCenterReactNative.a /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/UninstalledProducts/iphoneos/libAppCenterReactNative.a
    cd /Users/vsts/agent/2.140.2/work/1/s/node_modules/appcenter/ios
    export PATH="/Applications/Xcode_9.4.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin:/Applications/Xcode_9.4.1.app/Contents/Developer/usr/bin:/Library/Frameworks/Mono.framework/Versions/4/bin:/Users/vsts/.nvm/versions/node/v8.12.0/bin:/usr/local/bin:/usr/local/sbin:/Users/vsts/bin:/Users/vsts/.yarn/bin:/usr/local/go/bin:/Users/vsts/Library/Android/sdk/tools:/Users/vsts/Library/Android/sdk/platform-tools:/Users/vsts/Library/Android/sdk/ndk-bundle:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/bin:/bin:/usr/sbin:/sbin:/Users/vsts/.azcopy"
    /bin/ln -sfh /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/UninstalledProducts/iphoneos/libAppCenterReactNative.a /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/BuildProductsPath/Release-iphoneos/libAppCenterReactNative.a

CompileC /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/armv7/AppCenterReactNative.o AppCenterReactNative/AppCenterReactNative.m normal armv7 objective-c com.apple.compilers.llvm.clang.1_0.compiler
    cd /Users/vsts/agent/2.140.2/work/1/s/node_modules/appcenter/ios
    export LANG=en_US.US-ASCII
    export PATH="/Applications/Xcode_9.4.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin:/Applications/Xcode_9.4.1.app/Contents/Developer/usr/bin:/Library/Frameworks/Mono.framework/Versions/4/bin:/Users/vsts/.nvm/versions/node/v8.12.0/bin:/usr/local/bin:/usr/local/sbin:/Users/vsts/bin:/Users/vsts/.yarn/bin:/usr/local/go/bin:/Users/vsts/Library/Android/sdk/tools:/Users/vsts/Library/Android/sdk/platform-tools:/Users/vsts/Library/Android/sdk/ndk-bundle:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/bin:/bin:/usr/sbin:/sbin:/Users/vsts/.azcopy"
    /Applications/Xcode_9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x objective-c -arch armv7 -fmessage-length=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit=0 -std=gnu99 -fobjc-arc -fmodules -fmodules-cache-path=/Users/vsts/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -fmodules-prune-interval=86400 -fmodules-prune-after=345600 -fbuild-session-file=/Users/vsts/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -fmodules-validate-once-per-build-session -Wnon-modular-include-in-framework-module -Werror=non-modular-include-in-framework-module -Wno-trigraphs -fpascal-strings -Os -fno-common -Wno-missing-field-initializers -Wno-missing-prototypes -Werror=return-type -Wunreachable-code -Wno-implicit-atomic-properties -Werror=deprecated-objc-isa-usage -Werror=objc-root-class -Wno-arc-repeated-use-of-weak -Wduplicate-method-match -Wno-missing-braces -Wparentheses -Wswitch -Wunused-function -Wno-unused-label -Wno-unused-param...
/Users/vsts/agent/2.140.2/work/1/s/node_modules/appcenter/ios/AppCenterReactNative/AppCenterReactNative.m:42:26: error: no known class method for selector 'startFromLibraryWithServices:'
            [MSAppCenter startFromLibraryWithServices:@[serviceClass]];
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

CompileC /Users/vsts/Library/Developer/Xcode/DerivedData/AwesomeProject-dqmjpgceplekmwamioyvviahdnlx/Build/Intermediates.noindex/ArchiveIntermediates/AwesomeProject/IntermediateBuildFilesPath/AppCenterReactNative.build/Release-iphoneos/AppCenterReactNative.build/Objects-normal/arm64/AppCenterReactNative.o AppCenterReactNative/AppCenterReactNative.m normal arm64 objective-c com.apple.compilers.llvm.clang.1_0.compiler
    cd /Users/vsts/agent/2.140.2/work/1/s/node_modules/appcenter/ios
    export LANG=en_US.US-ASCII
    export PATH="/Applications/Xcode_9.4.1.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin:/Applications/Xcode_9.4.1.app/Contents/Developer/usr/bin:/Library/Frameworks/Mono.framework/Versions/4/bin:/Users/vsts/.nvm/versions/node/v8.12.0/bin:/usr/local/bin:/usr/local/sbin:/Users/vsts/bin:/Users/vsts/.yarn/bin:/usr/local/go/bin:/Users/vsts/Library/Android/sdk/tools:/Users/vsts/Library/Android/sdk/platform-tools:/Users/vsts/Library/Android/sdk/ndk-bundle:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/bin:/bin:/usr/sbin:/sbin:/Users/vsts/.azcopy"
    /Applications/Xcode_9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x objective-c -arch arm64 -fmessage-length=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit=0 -std=gnu99 -fobjc-arc -fmodules -fmodules-cache-path=/Users/vsts/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -fmodules-prune-interval=86400 -fmodules-prune-after=345600 -fbuild-session-file=/Users/vsts/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -fmodules-validate-once-per-build-session -Wnon-modular-include-in-framework-module -Werror=non-modular-include-in-framework-module -Wno-trigraphs -fpascal-strings -Os -fno-common -Wno-missing-field-initializers -Wno-missing-prototypes -Werror=return-type -Wunreachable-code -Wno-implicit-atomic-properties -Werror=deprecated-objc-isa-usage -Werror=objc-root-class -Wno-arc-repeated-use-of-weak -Wduplicate-method-match -Wno-missing-braces -Wparentheses -Wswitch -Wunused-function -Wno-unused-label -Wno-unused-param...
/Users/vsts/agent/2.140.2/work/1/s/node_modules/appcenter/ios/AppCenterReactNative/AppCenterReactNative.m:42:26: error: no known class method for selector 'startFromLibraryWithServices:'
            [MSAppCenter startFromLibraryWithServices:@[serviceClass]];
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.

** ARCHIVE FAILED **